# forge

./: .env.example  .gitignore  .turbo  CLAUDE.md  PERFORMANCE_FINDINGS_PASS2.md  PLAN.md  README.md  REDDIT_POST.md  WORKTREE_INVESTIGATION.md  eslint.config.mjs  node_modules  package.json  pnpm-lock.yaml  target  turbo.json
.claude/: RUST_BACKEND_ANALYSIS.md
.github/: FUNDING.yml
.playwright-mcp/: page-2026-04-03T19-57-26-904Z.yml
.serena/: project.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/apps/desktop/claude-host/claude-host/: tsconfig.json
apps/desktop/src-tauri/apps/desktop/claude-host/claude-host/src/: index.ts
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_command_ledger.sql  002_terminal_configs.sql  003_agent_cli.sql  003_workspace_colors.sql  004_agent_sessions.sql
apps/desktop/src-tauri/src/: db.rs  keychain.rs  lib.rs  main.rs  shell_env.rs  util.rs  watcher.rs
apps/desktop/src-tauri/src/agent/: adapter.rs  backend.rs  claude_backend.rs  codex_backend.rs  instance.rs  manager.rs  mod.rs  persistence.rs  session.rs  slash_commands.rs
apps/desktop/src-tauri/src/background/: mod.rs  repo_watcher.rs
apps/desktop/src-tauri/src/commands/: agent.rs  agent_config.rs  auth.rs  bay.rs  command_ledger.rs  event_store.rs  fs.rs  git.rs  github.rs  lane.rs  lsp.rs  mod.rs  notifications.rs  pty.rs  repo.rs  search.rs  terminal.rs  workspace.rs
apps/desktop/src-tauri/src/git/: branch.rs  clone.rs  commit.rs  commit_message.rs  diff.rs  log.rs  mod.rs  remote.rs  stash.rs  status.rs  worktree.rs
apps/desktop/src-tauri/src/github/: client.rs  device_flow.rs  graphql.rs  mod.rs  notifications.rs  search.rs
apps/desktop/src-tauri/src/github/mutations/: comments.rs  issue_actions.rs  issues.rs  mod.rs  pr_actions.rs  repo_actions.rs  reviews.rs
apps/desktop/src-tauri/src/github/queries/: issue_detail.rs  issues.rs  mod.rs  pr_detail.rs  pull_requests.rs
apps/desktop/src-tauri/src/lsp/: client.rs  manager.rs  mod.rs  transport.rs  types.rs
apps/desktop/src-tauri/src/models/: agent.rs  agent_cli.rs  auth.rs  bay.rs  command.rs  event.rs  fs.rs  git.rs  lane.rs  mod.rs  task.rs  terminal.rs  workspace.rs
apps/desktop/src-tauri/src/pty/: instance.rs  manager.rs  mod.rs
apps/desktop/src-tauri/src/terminal/: discovery.rs  manager.rs  mod.rs  session.rs
(+974 files in other folders)
