[package]
name = "forge"
version = "0.0.0"
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
lsp-types = "0.97"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
portable-pty = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
